If the current locale doesn't define the 'thousands' grouping info then use sane defaults (',' every 3 digits). Fixes PR/40714